--- a/backend/package.json
+++ b/backend/package.json
@@ -13,12 +13,14 @@
   },
   "dependencies": {
     "@google/generative-ai": "^0.24.0",
+    "axios": "^1.8.4",
     "bcryptjs": "^3.0.2",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "gemini-ai": "^2.2.1",
+    "geolib": "^3.3.4",
     "jsonwebtoken": "^9.0.2",
     "jwt-simple": "^0.5.6",
     "marked": "^15.0.7",
