--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,27 +10,21 @@
     "format": "prettier --write ."
   },
   "dependencies": {
-    "@react-spring/web": "^9.7.5",
     "axios": "^1.8.4",
-    "framer-motion": "^12.5.0",
+    "gsap": "^3.12.7",
+    "html2pdf.js": "^0.10.3",
+    "jspdf": "^3.0.1",
     "lucide-react": "^0.483.0",
     "next": "15.2.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
+    "react-markdown": "^10.1.0",
     "react-toastify": "^11.0.5"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
-    "@tailwindcss/postcss": "^4.0.15",
-    "@types/estree": "^1.0.7",
-    "@types/json-schema": "^7.0.15",
-    "autoprefixer": "^10.4.21",
-    "eslint": "^9",
-    "eslint-config-next": "15.2.3",
-    "postcss": "^8.5.3",
-    "prettier": "3.5.3",
-    "tailwindcss": "^4.0.15"
+    "prettier": "3.5.3"
   }
 }
