--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "format": "prettier --write ."
   },
   "dependencies": {
+    "@tailwindcss/postcss": "^4.1.4",
     "axios": "^1.8.4",
     "gsap": "^3.12.7",
     "html2pdf.js": "^0.10.3",
