--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "gsap": "^3.12.7",
     "html2pdf.js": "^0.10.3",
     "jspdf": "^3.0.1",
+    "jwt-decode": "^4.0.0",
     "lucide-react": "^0.483.0",
     "next": "15.2.3",
     "react": "^18.2.0",
