--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,12 +10,11 @@
     "format": "prettier --write ."
   },
   "dependencies": {
-    "@tailwindcss/postcss": "^4.1.4",
+    "@fortawesome/fontawesome-svg-core": "^6.7.2",
+    "@fortawesome/free-solid-svg-icons": "^6.7.2",
+    "@fortawesome/react-fontawesome": "^0.2.2",
     "axios": "^1.8.4",
-    "gsap": "^3.12.7",
     "html2pdf.js": "^0.10.3",
-    "jspdf": "^3.0.1",
-    "jwt-decode": "^4.0.0",
     "lucide-react": "^0.483.0",
     "next": "15.2.3",
     "react": "^18.2.0",
