--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,9 +16,9 @@
     "axios": "^1.8.4",
     "html2pdf.js": "^0.10.3",
     "lucide-react": "^0.483.0",
-    "next": "15.2.3",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "next": "^16.1.1",
+    "react": "^19.2.3",
+    "react-dom": "^19.2.3",
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
     "react-markdown": "^10.1.0",
